made website responsive

--- a/src/about.html
+++ b/src/about.html
@@ -27,11 +27,13 @@
   <body>
     <header role="navigation" class="header-nav">
         <figure class="img-container">
-          <img
-            src="./image_resources/think-saga-light-logo.png"
-            alt="think-saga-logo"
-            class="logo"
-          />
+          <a href="./index.html">
+            <img
+                src="./image_resources/think-saga-light-logo.png"
+                alt="think-saga-logo"
+                class="logo"
+              />
+        </a>
         </figure>
         <div class="social">
           <a href="https://facebook.com/thinksaga" target="_blank"
@@ -48,15 +50,15 @@
           <ul class="nav-links">
             <li><a href="./index.html">Home</a></li>
             <li><a href="./about.html" class="current">About</a></li>
+            <li><a href="./upload-article.html">Upload</a></li>
           </ul>
         </nav>
       </header>
 
     <!-- main -->
     <main>
-   <section>
-       <div class="container page-container padding-2">
-           <article class="card grid main-content">
+       <div class="container article-grid  padding-2">
+           <article class="card grid content">
                <h1>About Us</h1>
                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit laudantium atque eos vero voluptatibus perferendis nam, iste facilis possimus dolore molestias aliquam sunt vel sed expedita, amet voluptatem iusto accusamus, totam eius quae accusantium. Dolore, dolor nihil ratione rerum facilis, iusto similique hic, natus aliquam neque sequi voluptas ipsa perferendis? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste porro maiores omnis repellat. Assumenda obcaecati blanditiis, minus dolorem fuga nostrum ipsam repellendus natus, rem optio perspiciatis tempore vel est delectus quas numquam, omnis nesciunt hic ipsum molestias quam officia rerum cumque temporibus! Suscipit qui magni ea eius dignissimos accusantium rem consequatur fuga molestias nostrum adipisci numquam rerum fugit, sequi odit cum saepe? A, esse possimus velit minima ratione laudantium sequi, quasi quo ipsa nulla ea iusto doloribus nam, itaque corrupti voluptatem necessitatibus! Magni cupiditate soluta quisquam. Nisi laudantium, eos molestiae veritatis dolorem quam sequi recusandae assumenda consequatur velit voluptate dolorum!</p>
            </article>
@@ -66,7 +68,6 @@
                <a href="" class="btn ">Join Now</a>
            </aside>
        </div>
-   </section>
     </main>
 
     <footer class="bg-dark padding-2">
