--- a/src/index-copy.html
+++ b/src/index-copy.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
     <link
       rel="stylesheet"
-      media="screen and (max-width: 768px)"
+      media="screen and (max-width: 900px)"
       href="./styles/mobile.css"
     />
     <link
@@ -27,11 +27,13 @@
   <body>
     <header role="navigation" class="header-nav">
       <figure class="img-container">
-        <img
-          src="./image_resources/think-saga-light-logo.png"
-          alt="think-saga-logo"
-          class="logo"
-        />
+        <a href="./index.html">
+          <img
+            src="./image_resources/think-saga-light-logo.png"
+            alt="think-saga-logo"
+            class="logo"
+          />
+        </a>
       </figure>
       <div class="social">
         <a href="https://facebook.com/thinksaga" target="_blank"
@@ -48,6 +50,7 @@
         <ul class="nav-links">
           <li><a href="./index.html" class="current">Home</a></li>
           <li><a href="./about.html">About</a></li>
+          <li><a href="./upload-article.html">Upload</a></li>
         </ul>
       </nav>
     </header>
