--- a/src/index.html
+++ b/src/index.html
@@ -27,11 +27,13 @@
   <body>
     <header role="navigation" class="header-nav">
       <figure class="img-container">
-        <img
-          src="./image_resources/think-saga-light-logo.png"
-          alt="think-saga-logo"
-          class="logo"
-        />
+        <a href="./index.html">
+          <img
+            src="./image_resources/think-saga-light-logo.png"
+            alt="think-saga-logo"
+            class="logo"
+          />
+        </a>
       </figure>
       <div class="social">
         <a href="https://facebook.com/thinksaga" target="_blank"
@@ -48,6 +50,7 @@
         <ul class="nav-links">
           <li><a href="./index.html" class="current">Home</a></li>
           <li><a href="./about.html">About</a></li>
+          <li><a href="./upload-article.html">Upload</a></li>
         </ul>
       </nav>
     </header>
@@ -74,10 +77,28 @@
         <!-- <div class="container"> -->
         <h2>Editor Picks</h2>
         <div class="articles-container">
-          <article class="card span-2 reverse">
+          <article class="card reverse">
             <img src="./image_resources/articles/ent1.jpg" alt="" />
             <div class="content">
               <div class="category">Entertainment</div>
+              <a href="./article.html"><h3>Lorem, ipsum dolor</h3></a>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel
+                omnis dolore adipisci
+              </p>
+            </div>
+          </article>
+          <article class="card content bg-dark">
+            <div class="category">Entertainment</div>
+            <a href="./article.html"><h3>Lorem, ipsum dolor</h3></a>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel omnis
+            </p>
+          </article>
+          <article class="card">
+            <img src="./image_resources/articles/tech1.jpg" alt="" />
+            <div class="content">
+              <div class="category">Technology</div>
               <a href="./article.html"><h3>Lorem, ipsum dolor</h3></a>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel
@@ -86,65 +107,47 @@
               </p>
             </div>
           </article>
-          <article class="card bg-dark">
-            <div class="category">Entertainment</div>
-            <a href="./article.html"><h3>Lorem, ipsum dolor</h3></a>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel omnis
-              dolore adipisci dignissimos odit culpa nam expedita perferendis
-              quod accusantium.
-            </p>
-          </article>
           <article class="card">
-            <img src="./image_resources/articles/tech1.jpg" alt="" />
-            <div class="category">Technology</div>
-            <a href="./article.html"><h3>Lorem, ipsum dolor</h3></a>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel omnis
-              dolore adipisci dignissimos odit culpa nam expedita perferendis
-              quod accusantium.
-            </p>
-          </article>
-          <article class="card">
-            <div class="category">Technology</div>
-            <a href="./article.html"><h3>Lorem, ipsum dolor</h3></a>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel omnis
-              dolore adipisci dignissimos odit culpa nam expedita perferendis
-              quod accusantium.
-            </p>
-            <img src="./image_resources/articles/tech1.jpg" alt="" />
-          </article>
-          <article class="card">
-            <img src="./image_resources/articles/tech1.jpg" alt="" />
-            <div class="category">Technology</div>
-            <a href="./article.html"><h3>Lorem, ipsum dolor</h3></a>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel omnis
-              dolore adipisci dignissimos odit culpa nam expedita perferendis
-              quod accusantium.
-            </p>
-          </article>
-          <article class="card">
-            <div class="category">Entertainment</div>
-            <a href="./article.html"><h3>Lorem, ipsum dolor</h3></a>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel omnis
-              dolore adipisci dignissimos odit culpa nam expedita perferendis
-              quod accusantium.
-            </p>
-          </article>
-          <!-- 
-
-           -->
-          <article class="card span-2 final bg-primary">
             <div class="content">
-              <div class="category">Entertainment</div>
+              <div class="category">Technology</div>
               <a href="./article.html"><h3>Lorem, ipsum dolor</h3></a>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel
                 omnis dolore adipisci dignissimos odit culpa nam expedita
                 perferendis quod accusantium.
+              </p>
+            </div>
+            <img src="./image_resources/articles/tech1.jpg" alt="" />
+          </article>
+          <article class="card">
+            <img src="./image_resources/articles/tech1.jpg" alt="" />
+            <div class="content">
+              <div class="category">Technology</div>
+              <a href="./article.html"><h3>Lorem, ipsum dolor</h3></a>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel
+                omnis dolore adipisci dignissimos odit culpa nam expedita
+                perferendis quod accusantium.
+              </p>
+            </div>
+          </article>
+          <article class="card content">
+            <div class="category">Entertainment</div>
+            <a href="./article.html"><h3>Lorem, ipsum dolor</h3></a>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel omnis
+            </p>
+          </article>
+          <!-- 
+
+           -->
+          <article class="card final bg-primary">
+            <div class="content">
+              <div class="category">Entertainment</div>
+              <a href="./article.html"><h3>Lorem, ipsum dolor</h3></a>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel
+                omnis dolore adipisci
               </p>
             </div>
             <img src="./image_resources/articles/ent2.jpg" alt="" />
