--- a/src/upload-article.html
+++ b/src/upload-article.html
@@ -27,11 +27,13 @@
   <body>
     <header role="navigation" class="header-nav">
       <figure class="img-container">
-        <img
-          src="./image_resources/think-saga-light-logo.png"
-          alt="think-saga-logo"
-          class="logo"
-        />
+        <a href="./index.html">
+          <img
+            src="./image_resources/think-saga-light-logo.png"
+            alt="think-saga-logo"
+            class="logo"
+          />
+        </a>
       </figure>
       <div class="social">
         <a href="https://facebook.com/thinksaga" target="_blank"
@@ -48,6 +50,7 @@
         <ul class="nav-links">
           <li><a href="./index.html">Home</a></li>
           <li><a href="./about.html">About</a></li>
+          <li><a class="current" href="./upload-article.html">Upload</a></li>
         </ul>
       </nav>
     </header>
@@ -160,6 +163,50 @@
         </aside>
       </div>
     </main>
+    <footer class="bg-dark padding-2">
+        <div class="container">
+          <section class="grid">
+            <img
+              src="./image_resources/think-saga-light-logo.png"
+              alt="NewsGrid"
+            />
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio
+              veniam ullam, itaque eos ipsum error.
+            </p>
+          </section>
+          <section >
+            <form action="" class="grid">
+            <h3>Email Newsletter</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis,
+              incidunt!
+            </p>
+              <input type="email" placeholder="Email" />
+              <button type="submit" subscribe" class="btn btn-primary">Subscribe</button>
+            </form>
+          </section>
+          <section class="grid" class="footer-nav">
+            <h3>Site Links</h3>
+            <ul class="grid">
+              <li><a href="#">Help & Support</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </section>
+          <section class="grid">
+            <h3>Join Our Club</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, ullam.</p>
+            <button href="" class="btn btn-secondary">Join Now</button>
+          </section>
+          <section class="copyright">
+            <p>
+              Copyright &copy; 2021, All Rights Reserved
+            </p>
+          </section>
+        </div>
+      </footer>
     <script type="module" src="./scripts/localStorage.js"></script>
     <script type="module" src="./scripts/01_controller.js"></script>
   </body>
