Added ability to edit articles

--- a/src/about.html
+++ b/src/about.html
@@ -7,16 +7,16 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
     </style>
-    <script
+    <!-- <script
       src="https://kit.fontawesome.com/83087b65bd.js"
       crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" href="./styles/style.css" />
+    ></script> -->
+    <!-- <link rel="stylesheet" href="./styles/style.css" />
     <link
       rel="stylesheet"
       media="screen and (max-width: 768px)"
       href="./styles/mobile.css"
-    />
+    /> -->
     <link
       rel="shortcut icon"
       href="./image_resources/favicon/think-saga-fav.jpg"
@@ -26,48 +26,70 @@
   </head>
   <body>
     <header role="navigation" class="header-nav">
-        <figure class="img-container">
-          <a href="./index.html">
-            <img
-                src="./image_resources/think-saga-light-logo.png"
-                alt="think-saga-logo"
-                class="logo"
-              />
+      <figure class="img-container">
+        <a href="./index.html">
+          <img
+            src="./image_resources/think-saga-light-logo.png"
+            alt="think-saga-logo"
+            class="logo"
+          />
         </a>
-        </figure>
-        <div class="social">
-          <a href="https://facebook.com/thinksaga" target="_blank"
-            ><i class="fab fa-facebook fa-2x"></i
-          ></a>
-          <a href="https://twitter.com/thinksaga" target="_blank"
-            ><i class="fab fa-twitter fa-2x"></i
-          ></a>
-          <a href="https://instagram.com/thinksaga" target="_blank"
-            ><i class="fab fa-instagram fa-2x"></i
-          ></a>
-        </div>
-        <nav>
-          <ul class="nav-links">
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./about.html" class="current">About</a></li>
-            <li><a href="./upload-article.html">Upload</a></li>
-          </ul>
-        </nav>
-      </header>
+      </figure>
+      <div class="social">
+        <a href="https://facebook.com/thinksaga" target="_blank"
+          ><i class="fab fa-facebook fa-2x"></i
+        ></a>
+        <a href="https://twitter.com/thinksaga" target="_blank"
+          ><i class="fab fa-twitter fa-2x"></i
+        ></a>
+        <a href="https://instagram.com/thinksaga" target="_blank"
+          ><i class="fab fa-instagram fa-2x"></i
+        ></a>
+      </div>
+      <nav>
+        <ul class="nav-links">
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./about.html" class="current">About</a></li>
+          <li><a href="./upload-article.html">Upload</a></li>
+        </ul>
+      </nav>
+    </header>
 
     <!-- main -->
     <main>
-       <div class="container article-grid  padding-2">
-           <article class="card grid content">
-               <h1>About Us</h1>
-               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit laudantium atque eos vero voluptatibus perferendis nam, iste facilis possimus dolore molestias aliquam sunt vel sed expedita, amet voluptatem iusto accusamus, totam eius quae accusantium. Dolore, dolor nihil ratione rerum facilis, iusto similique hic, natus aliquam neque sequi voluptas ipsa perferendis? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste porro maiores omnis repellat. Assumenda obcaecati blanditiis, minus dolorem fuga nostrum ipsam repellendus natus, rem optio perspiciatis tempore vel est delectus quas numquam, omnis nesciunt hic ipsum molestias quam officia rerum cumque temporibus! Suscipit qui magni ea eius dignissimos accusantium rem consequatur fuga molestias nostrum adipisci numquam rerum fugit, sequi odit cum saepe? A, esse possimus velit minima ratione laudantium sequi, quasi quo ipsa nulla ea iusto doloribus nam, itaque corrupti voluptatem necessitatibus! Magni cupiditate soluta quisquam. Nisi laudantium, eos molestiae veritatis dolorem quam sequi recusandae assumenda consequatur velit voluptate dolorum!</p>
-           </article>
-           <aside class="card grid bg-primary">
-               <h2>Join Our Club</h2>
-               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim, maiores.</p>
-               <a href="" class="btn ">Join Now</a>
-           </aside>
-       </div>
+      <div class="container article-grid padding-2">
+        <article class="card grid content">
+          <h1>About Us</h1>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit
+            laudantium atque eos vero voluptatibus perferendis nam, iste facilis
+            possimus dolore molestias aliquam sunt vel sed expedita, amet
+            voluptatem iusto accusamus, totam eius quae accusantium. Dolore,
+            dolor nihil ratione rerum facilis, iusto similique hic, natus
+            aliquam neque sequi voluptas ipsa perferendis? Lorem ipsum dolor sit
+            amet, consectetur adipisicing elit. Iste porro maiores omnis
+            repellat. Assumenda obcaecati blanditiis, minus dolorem fuga nostrum
+            ipsam repellendus natus, rem optio perspiciatis tempore vel est
+            delectus quas numquam, omnis nesciunt hic ipsum molestias quam
+            officia rerum cumque temporibus! Suscipit qui magni ea eius
+            dignissimos accusantium rem consequatur fuga molestias nostrum
+            adipisci numquam rerum fugit, sequi odit cum saepe? A, esse possimus
+            velit minima ratione laudantium sequi, quasi quo ipsa nulla ea iusto
+            doloribus nam, itaque corrupti voluptatem necessitatibus! Magni
+            cupiditate soluta quisquam. Nisi laudantium, eos molestiae veritatis
+            dolorem quam sequi recusandae assumenda consequatur velit voluptate
+            dolorum!
+          </p>
+        </article>
+        <aside class="card grid bg-primary">
+          <h2>Join Our Club</h2>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim,
+            maiores.
+          </p>
+          <a href="" class="btn">Join Now</a>
+        </aside>
+      </div>
     </main>
 
     <footer class="bg-dark padding-2">
@@ -82,15 +104,15 @@
             veniam ullam, itaque eos ipsum error.
           </p>
         </section>
-        <section >
+        <section>
           <form action="" class="grid">
-          <h3>Email Newsletter</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis,
-            incidunt!
-          </p>
+            <h3>Email Newsletter</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis,
+              incidunt!
+            </p>
             <input type="email" placeholder="Email" />
-            <button type="submit" subscribe" class="btn btn-primary">Subscribe</button>
+            <button type="submit" class="btn btn-primary">Subscribe</button>
           </form>
         </section>
         <section class="grid" class="footer-nav">
@@ -104,13 +126,14 @@
         </section>
         <section class="grid">
           <h3>Join Our Club</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, ullam.</p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima,
+            ullam.
+          </p>
           <button href="" class="btn btn-secondary">Join Now</button>
         </section>
         <section class="copyright">
-          <p>
-            Copyright &copy; 2021, All Rights Reserved
-          </p>
+          <p>Copyright &copy; 2021, All Rights Reserved</p>
         </section>
       </div>
     </footer>
