--- a/src/old-index.html
+++ b/src/old-index.html
@@ -7,16 +7,16 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
     </style>
-    <script
+    <!-- <script
       src="https://kit.fontawesome.com/83087b65bd.js"
       crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" href="./styles/style.css" />
+    ></script> -->
+    <!-- <link rel="stylesheet" href="./styles/style.css" />
     <link
       rel="stylesheet"
-      media="screen and (max-width: 900px)"
+      media="screen and (max-width: 768px)"
       href="./styles/mobile.css"
-    />
+    /> -->
     <link
       rel="shortcut icon"
       href="./image_resources/favicon/think-saga-fav.jpg"
@@ -76,7 +76,84 @@
       <section class="section padding-2">
         <!-- <div class="container"> -->
         <h2>Editor Picks</h2>
-        <div id="articles-container" class="articles-container-2"></div>
+        <div class="articles-container">
+          <article class="card reverse">
+            <img src="./image_resources/articles/ent1.jpg" alt="" />
+            <div class="content">
+              <div class="category">Entertainment</div>
+              <a href="./article.html"><h3>Lorem, ipsum dolor</h3></a>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel
+                omnis dolore adipisci
+              </p>
+            </div>
+          </article>
+          <article class="card content bg-dark">
+            <div class="category">Entertainment</div>
+            <a href="./article.html"><h3>Lorem, ipsum dolor</h3></a>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel omnis
+            </p>
+          </article>
+          <article class="card">
+            <img src="./image_resources/articles/tech1.jpg" alt="" />
+            <div class="content">
+              <div class="category">Technology</div>
+              <a href="./article.html"><h3>Lorem, ipsum dolor</h3></a>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel
+                omnis dolore adipisci dignissimos odit culpa nam expedita
+                perferendis quod accusantium.
+              </p>
+            </div>
+          </article>
+          <article class="card">
+            <div class="content">
+              <div class="category">Technology</div>
+              <a href="./article.html"><h3>Lorem, ipsum dolor</h3></a>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel
+                omnis dolore adipisci dignissimos odit culpa nam expedita
+                perferendis quod accusantium.
+              </p>
+            </div>
+            <img src="./image_resources/articles/tech1.jpg" alt="" />
+          </article>
+          <article class="card">
+            <img src="./image_resources/articles/tech1.jpg" alt="" />
+            <div class="content">
+              <div class="category">Technology</div>
+              <a href="./article.html"><h3>Lorem, ipsum dolor</h3></a>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel
+                omnis dolore adipisci dignissimos odit culpa nam expedita
+                perferendis quod accusantium.
+              </p>
+            </div>
+          </article>
+          <article class="card content">
+            <div class="category">Entertainment</div>
+            <a href="./article.html"><h3>Lorem, ipsum dolor</h3></a>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel omnis
+            </p>
+          </article>
+          <!-- 
+
+           -->
+          <article class="card final bg-primary">
+            <div class="content">
+              <div class="category">Entertainment</div>
+              <a href="./article.html"><h3>Lorem, ipsum dolor</h3></a>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel
+                omnis dolore adipisci
+              </p>
+            </div>
+            <img src="./image_resources/articles/ent2.jpg" alt="" />
+          </article>
+          <!--  -->
+        </div>
         <!-- </div> -->
       </section>
     </main>
@@ -126,7 +203,6 @@
         </section>
       </div>
     </footer>
-    <script type="module" src="./scripts/localStorage.js"></script>
-    <script type="module" src="./scripts/01_controller.js"></script>
+    <!-- <script src="./scripts/home.js"></script> -->
   </body>
 </html>
