added delete article functionality

--- a/src/edit-article.html
+++ b/src/edit-article.html
@@ -138,7 +138,10 @@
             Choose New Image
             <input type="file" id="image" name="image" accept="image/*" />
           </label>
-          <button type="submit" class="btn">Submit</button>
+          <button type="submit" class="btn">Update Article</button>
+          <a href="./index.html" id="delete-form" class="btn btn-secondary"
+            >Delete Article</a
+          >
         </form>
 
         <aside class="categories card">
