optimised css of delete article button

--- a/src/edit-article.html
+++ b/src/edit-article.html
@@ -139,10 +139,12 @@
             <input type="file" id="image" name="image" accept="image/*" />
           </label>
           <button type="submit" class="btn">Update Article</button>
-          <a href="./index.html" id="delete-form" class="btn btn-secondary"
+        </form>
+        <div class="delete-button-container">
+          <a href="./index.html" id="delete-article" class="btn btn-secondary"
             >Delete Article</a
           >
-        </form>
+        </div>
 
         <aside class="categories card">
           <h2>categories</h2>
