--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
             Quaerat voluptas suscipit cumque. Quod nostrum esse maiores. Dicta
             et eligendi vitae.
           </p>
-          <a href="./article.html" class="btn">Read More</a>
+          <a href="./about.html" class="btn">Read More</a>
         </section>
       </header>
 
