added initial article

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
     <!-- main -->
     <main>
       <!-- showcase -->
-      <header class="hero">
+      <div class="hero">
         <section class="container">
           <div class="category">Tech</div>
           <h1>Latest Tech News</h1>
@@ -70,10 +70,10 @@
           </p>
           <a href="./about.html" class="btn">Read More</a>
         </section>
-      </header>
+      </div>
 
       <!-- home article -->
-      <section class="section padding-2">
+      <section class="section padding-5">
         <!-- <div class="container"> -->
         <h2>Editor Picks</h2>
         <div id="articles-container" class="articles-container-2"></div>
