fixed bug with floating footer on short pages

--- a/src/about.html
+++ b/src/about.html
@@ -56,7 +56,7 @@
     </header>
 
     <!-- main -->
-    <main>
+    <main class="about">
       <div class="container article-grid padding-2">
         <article class="card grid content">
           <h1>About Us</h1>
