--- a/src/article.html
+++ b/src/article.html
@@ -56,7 +56,7 @@
     </header>
 
     <!-- main -->
-    <main>
+    <main class="article">
       <div class="container padding-2 article-grid">
         <section id="article" class="content card">
           <figure>
@@ -104,54 +104,55 @@
           <a href="" class="btn">Join Now</a>
         </aside>
       </div>
-      <footer class="bg-dark padding-2">
-        <div class="container">
-          <section class="grid">
-            <img
-              src="./image_resources/think-saga-light-logo.png"
-              alt="NewsGrid"
-            />
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio
-              veniam ullam, itaque eos ipsum error.
-            </p>
-          </section>
-          <section>
-            <form action="" class="grid">
-              <h3>Email Newsletter</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Officiis, incidunt!
-              </p>
-              <input type="email" placeholder="Email" />
-              <button type="submit" class="btn btn-primary">Subscribe</button>
-            </form>
-          </section>
-          <section class="grid" class="footer-nav">
-            <h3>Site Links</h3>
-            <ul class="grid">
-              <li><a href="#">Help & Support</a></li>
-              <li><a href="#">Privacy Policy</a></li>
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Contact</a></li>
-            </ul>
-          </section>
-          <section class="grid">
-            <h3>Join Our Club</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima,
-              ullam.
-            </p>
-            <button href="" class="btn btn-secondary">Join Now</button>
-          </section>
-          <section class="copyright">
-            <p>Copyright &copy; 2021, All Rights Reserved</p>
-          </section>
-        </div>
-      </footer>
+
       <!-- <script type="module" src="./scripts/localStorage.js"></script>
       <script type="module" src="./scripts/01_controller.js"></script> -->
       <!-- <script type="module" src="./scripts/index.js"></script> -->
     </main>
+    <footer class="bg-dark padding-2">
+      <div class="container">
+        <section class="grid">
+          <img
+            src="./image_resources/think-saga-light-logo.png"
+            alt="NewsGrid"
+          />
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio
+            veniam ullam, itaque eos ipsum error.
+          </p>
+        </section>
+        <section>
+          <form action="" class="grid">
+            <h3>Email Newsletter</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis,
+              incidunt!
+            </p>
+            <input type="email" placeholder="Email" />
+            <button type="submit" class="btn btn-primary">Subscribe</button>
+          </form>
+        </section>
+        <section class="grid" class="footer-nav">
+          <h3>Site Links</h3>
+          <ul class="grid">
+            <li><a href="#">Help & Support</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </section>
+        <section class="grid">
+          <h3>Join Our Club</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima,
+            ullam.
+          </p>
+          <button href="" class="btn btn-secondary">Join Now</button>
+        </section>
+        <section class="copyright">
+          <p>Copyright &copy; 2021, All Rights Reserved</p>
+        </section>
+      </div>
+    </footer>
   </body>
 </html>
