--- a/src/edit-article.html
+++ b/src/edit-article.html
@@ -57,7 +57,7 @@
     </header>
 
     <!-- main -->
-    <main>
+    <main class="edit-article">
       <div class="article-grid container padding-2">
         <form id="edit-article" class="content card" action="">
           <h1>Edit Your Blog Post</h1>
