--- a/src/upload-article.html
+++ b/src/upload-article.html
@@ -57,7 +57,7 @@
     </header>
 
     <!-- main -->
-    <main>
+    <main class="upload-article">
       <div class="article-grid container padding-2">
         <form id="submit-article" class="content card" action="">
           <h1>Create Your Blog Post</h1>
